--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ include:
 
 variables:
   RENOVATE_EXTRA_FLAGS: --autodiscover=true --onboarding=true --autodiscover-filter=thielepaul/renovate-gonum
+  RENOVATE_LOG_FILE_LEVEL: "debug"
 renovate:
   rules:
     - when: always
